# lean-esp32

./: README.md  flake.nix
example-app/: Main.lean  Peripherals.lean  lakefile.lean  start.c
patches/: nixpkgs-ffunction-sections.patch  nixpkgs.patch  qemu.patch
platform/: esp32-c3.ld
platform/lean/: lean.h
platform/runtime/: CMakeLists.txt  apply.cpp  buffer.h  debug.h  hash.cpp  hash.h  init_module.cpp  io.cpp  io.h  mpn.cpp  mpn.h  mpz.cpp  mpz.h  object.cpp  object.h  utf8.cpp  utf8.h
